# contactdb

./: .coveragerc  .dockerignore  .editorconfig  .env.develop.docker.example  .env.develop.example  .env.example  .env.test  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierrc  Dockerfile  README.md  compose.override.example.yml  compose.override.local-build.yml  compose.override.test.yml  compose.yml  conftest.py  cypress.config.js  docker-compose.override.example.yml  docker-compose.override.local-build.yml  docker-compose.override.test.yml  docker-compose.yml  eslint.config.js  index.html  kronos_meetings.json  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  pytest.ini  quasar.config.ts  scratch.py  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy-production.yml  deploy-staging.yml  docker-build.yml  lint-black.yml  lint-npm.yml  lint-prettier.yml  lint-python.yml  lint.yml  reusable-deploy.yml  tests.yml
accounts/: admin.py  apps.py  conftest.py  models.py  tasks.py  views.py
accounts/migrations/: 0001_citext.py  0002_initial.py  0003_remove_user_groups_role_user_roles.py  0003_user_can_edit_user_can_import_user_can_send_mail_and_more.py  0003_user_is_staff.py  0004_alter_role_options_alter_user_roles.py
accounts/tests/: test_users.py
api/: pagination.py  permissions.py  urls.py
api/serializers/: contact.py  country.py  dsa.py  event.py  priority_pass.py  user.py
api/tests/: base.py  factories.py  test_app_settings.py  test_contact_photo.py  test_events.py  test_nominations.py  test_priority_pass.py
api/views/: contact.py  dsa.py  event.py  misc.py  nomination.py  priority_pass.py  registration.py  user.py
common/: array_field.py  audit.py  auto_complete_multiple.py  boolean_widget.py  dates.py  docx_format.py  filters.py  fuzzy_search.py  import_export.py  model.py  model_admin.py  parsing.py  pdf.py  permissions.py  protected_media.py  serializers.py  urls.py  utils.py
contactdb/: asgi.py  settings.py  site.py  urls.py  wsgi.py
contactdb/settings/: develop.py  settings.py  testing.py
core/: admin.py  apps.py  filters.py  forms.py  jobs.py  kronos.py  models.py  parsers.py  tables.py  temp_models.py  utils.py  views.py  widgets.py
core/admin/: __init__.py  contact.py  contact_base.py  contact_group.py  country.py  import_contact_photos_task.py  import_focal_points_task.py  import_legacy_contacts_tasks.py  log_entry.py  organization.py  organization_type.py  possible_duplicate.py  region.py  resolve_conflict.py
core/jobs/: __init__.py  contact_photos.py  focal_points.py  legacy_contacts.py
core/migrations/: 0002_initial.py  0003_auto_20240429_1101.py  0003_auto_20240429_1104.py  0003_delete_resolveallconflictstask.py  0003_organization_record_registrationstatus.py  0004_alter_contactgroup_options.py  0004_alter_organization_options.py  0004_country_official_name_alter_country_name.py  0005_alter_organization_options_group.py  0005_alter_organization_options_record_focal_point_and_more.py  0005_importlegacycontactstask.py  0005_organizationtype_description_organizationtype_title_and_more.py  0006_alter_group_contacts.py  0006_alter_organizationtype_options_and_more.py  0006_record_focal_point_record_honorific_record_org_head_and_more.py  0006_unacent.py  0007_alter_contactgroup_description_alter_country_name_and_more.py  0007_alter_group_contacts.py  0007_emails.py  0007_loadkronoseventstask.py  0007_remove_contact_focal_point_and_more.py  0008_contact_is_organization_and_more.py  0008_contact_is_organization_email_and_more.py  0008_contact_organization_primary_contact_and_more.py  0008_kronosevent.py  0008_loadkronoseventstask.py  0008_organization_include_in_invitation.py  0008_remove_contact_contact_id_contact_contact_ids_and_more.py  0009_alter_contact_is_organization_and_more.py  0009_alter_kronosevent_end_date_and_more.py  0009_kronosevent.py  0009_organization_address_organization_city_and_more.py  0009_possibleduplicate_possibleduplicatecontact_and_more.py  0010_alter_contact_email_ccs_alter_contact_emails_and_more.py  0010_alter_kronosevent_end_date_and_more.py  0010_auto_20240424_0749.py  0010_auto_20250522_1224.py  0010_loadkronosparticipantstask.py  0011_auto_20240424_0938.py  0011_auto_20250522_1144.py  (+68 more)
core/templatetags/: core_extra.py  custom_tags.py  file_base64.py
core/tests/: test_clean_organization_emails.py  test_emails.py  test_export.py  test_groups.py  test_import.py  test_import_contacts_from_kronos.py  test_import_focal_points.py  test_merging.py  test_records.py  test_records_list.py  test_sync_kronos.py
cypress/support/: commands.js  e2e.js  utils.js
docker/: app.dev.docker  app.docker  nginx.conf  nginx.docker  wait_for_services.sh
docker/nginx-templates/: default.nginx.conf.template
docs/: development_guide.md  host-nginx.example.conf  install_actions_runner.md  install_develop.md  install_docker.md  local_docker_build.md  tests.md
emails/: admin.py  apps.py  factories.py  jobs.py  models.py  placeholders.py  services.py  tests.py  validators.py
emails/migrations/: 0001_initial.py  0002_alter_sendemailtask_contact.py  0002_email_bcc_groups_email_bcc_recipients_and_more.py  0002_sendemailtask_email_cc_sendemailtask_email_to_and_more.py  0003_alter_emailattachment_name_and_more.py  0005_alter_emailattachment_file.py  (+15 more)
events/: admin.py  apps.py  jobs.py  kronos.py  list_of_participants.py  models.py  parsers.py  signals.py  statistics.py  utils.py
requirements/: base.txt  constraints.txt  dev.txt
src/: App.vue  constants.ts  env.d.ts
static/: admin.css  base.css  contacts.css  email_detail.css  email_list.css  group_detail.css  groups.css  home_page.css  login.css  record_detail.css  resolve_conflicts.css  sync_kronos.css
templates/: 403.html  403_csrf.html  404.html  500.html  base.html  conflict_field.html  email_list_field.html  email_tags.html  import_export.html  merge_contact_field.html  record_detail_field.html  record_form_field.html  records_list_page.html  records_table.html  send_emails.html  table.html
(+369 files in other folders)
