[project]
name = "contactdb"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-rest-auth==7.0.1",
    "django==5.2.*",
    "django-admin-autocomplete-filter==0.7.1",
    "django-admin-env-notice==1.0.1",
    "django-admin-rangefilter==0.13.3",
    "django-auditlog==3.3.0",
    "django-ckeditor==6.7.3",
    "django-colorfield==0.14.0",
    "django-constance==4.3.2",
    "django-cors-headers==4.9.0",
    "django-db-views==0.1.13",
    "django-environ==0.12.0",
    "django-extensions==4.1",
    "django-fernet-encrypted-fields==0.3.0",
    "django-filter==25.2",
    "django-group-model==1.0.1",
    "django-health-check==3.20.0",
    "django-import-export[xlsx]==4.3.10",
    "django-model-utils==5.0.0",
    "django-more-admin-filters==1.13",
    "django-object-actions==5.0.0",
    "django-qr-code==4.2.0",
    "django-redis==6.0.0",
    "django-rq==3.1",
    "django-task==2.1.0",
    "django-timezone-field==7.1",
    "django-two-factor-auth[phonenumbers]==1.18.1",
    "djangorestframework==3.16.1",
    "djangorestframework-camel-case==1.4.2",
    "drf-extra-fields==3.7.0",
    "drf-spectacular[sidecar]==0.28.0",
    "gunicorn==23.0.0",
    "img2pdf==0.6.1",
    "pillow==11.3.0",
    "psycopg[binary]==3.2.10",
    "pycountry==24.6.1",
    "python-docx==1.2.0",
    "qrcode==8.2",
    "requests==2.32.5",
    "rq-scheduler==0.14.0",
    "sentry-sdk[django]==2.41.0",
    "wait-for-it==2.3.0",
    "weasyprint==66.0",
]

[dependency-groups]
dev = [
    "coverage==7.10.7",
    "django-debug-toolbar==6.0.0",
    "factory-boy==3.3.3",
    "ipdb==0.13.13",
    "ipython==9.6.0",
    "pdfminer-six==20250506",
    "pre-commit==4.3.0",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pytest-django==4.11.1",
    "pytest-mock==3.15.1",
    "pytest-subtests==0.14.2",
    "ruff==0.14.0",
]

[tool.ruff.lint]
select = [
    "E4", # pycodestyle
    "E7",
    "E9",
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "S", # flake8-bandit
    "FBT", # flake8-boolean-trap
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "DJ", # flake8-django
    "LOG", # flake8-logging
    "G", # flake8-logging-format
    "T20", # flake8-print
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "INT", # flake8-gettext
    "PTH", # flake8-use-pathlib
    "NPY", # numpy rules
    "PT", # flake8-pytest
]
ignore = [
  # Allow boolean default positional arguments, as django has many of those.
  "FBT002",
  "FBT003",
  # Allow using mark_safe
  "S308",
]

[tool.ruff.lint.per-file-ignores]
"**/conftest.py" = [
  # Allow hardcoded passwords in tests
  "S106",
]
"**/tests/*" = [
  # Allow hardcoded passwords in tests
  "S106",
  # Allow unittest style asserts
  "PT009",
  # Allow unittest style assertRaises
  "PT027",
]
"**/tests.py" = [
  # Allow hardcoded passwords in tests
  "S106",
  # Allow unittest style asserts
  "PT009",
  # Allow unittest style assertRaises
  "PT027",
]
